<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/forecast_detail_horizontal_padding"
    android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
    android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
    android:paddingRight="@dimen/forecast_detail_horizontal_padding"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:background="@color/detail_accent_pane_background"
    android:columnCount="2">

    <TextView
        android:id="@+id/detail_humidity_label_textview"
        android:gravity="center_vertical"
        android:layout_gravity="fill"
        android:fontFamily="sans-serif"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        android:text="@string/humidity"/>

    <TextView
        android:id="@+id/detail_humidity_textview"
        android:gravity="center_vertical"
        android:layout_gravity="fill"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/detail_pressure_label_textview"
        android:gravity="center_vertical"
        android:layout_gravity="fill"
        android:fontFamily="sans-serif"
        android:layout_rowWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        android:text="@string/pressure"/>

    <TextView
        android:id="@+id/detail_pressure_textview"
        android:gravity="center_vertical"
        android:layout_gravity="fill"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/detail_wind_label_textview"
        android:gravity="center_vertical"
        android:layout_gravity="fill"
        android:fontFamily="sans-serif"
        android:layout_rowWeight="1"
        android:textColor="@color/detail_accent_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/wind"/>

    <TextView
        android:id="@+id/detail_wind_textview"
        android:gravity="center_vertical"
        android:layout_gravity="fill"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white" />

</GridLayout>