<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <include layout="@layout/detail_today_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:background="@android:color/transparent"/>

        </FrameLayout>

        <GridLayout
            android:id="@+id/detail_additional_pane"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:background="@color/detail_accent_pane_background"
            android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            >

            <android.support.v4.widget.Space
                android:layout_columnSpan="2"
                android:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_humidity_label_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/humidity"
                android:textColor="@color/detail_accent_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                />

            <TextView
                android:id="@+id/detail_humidity_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="38%"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                />

            <TextView
                android:id="@+id/detail_pressure_label_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/pressure"
                android:textColor="@color/detail_accent_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingTop="@dimen/detail_view_extra_padding"
                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                />


            <TextView
                android:id="@+id/detail_pressure_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="995 hPa"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                />

            <TextView
                android:id="@+id/detail_wind_label_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/wind"
                android:textColor="@color/detail_accent_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingTop="@dimen/detail_view_extra_padding"
                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                />

            <TextView
                android:id="@+id/detail_wind_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="4km/h NW"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                />

            <android.support.v4.widget.Space
                android:layout_columnSpan="2"
                android:layout_rowWeight="1" />

        </GridLayout>
    </LinearLayout>
</FrameLayout>